# ousia

./: .gitignore  CMakeLists.txt  Doxyfile.in  README.md  build.sh  clean.sh  config.h.in  dependencies.txt  valgrind_suppressions.supp
contrib/: test.osml
contrib/gtksourceview-3.0/language-specs/: ousia.lang
contrib/xslt/: mathml.xsl  poem.xsl
data/domain/: bibliography.osxml  book.osxml  comments.osxml  headings.osxml  lists.osxml  meta.osxml  structure.osxml
data/ontology/: bibliography.osxml  book.osxml  comments.osxml  emphasis.osxml  headings.osxml  lists.osxml  math.osml  meta.osxml  poem.osml
data/typesystem/: affiliation.osxml  color.oxm
lib/: download_dependencies.sh
src/: main.cpp
src/cli/: Main.cpp
src/core/: BufferedCharReader.cpp  BufferedCharReader.hpp  CSS.cpp  CSS.hpp  CSSParser.cpp  CSSParser.hpp  CodeTokenizer.cpp  CodeTokenizer.hpp  Exceptions.cpp  Exceptions.hpp  Logger.cpp  Logger.hpp  Managed.cpp  Managed.hpp  ManagedContainers.hpp  Node.cpp  Node.hpp  Parser.cpp  RangeSet.cpp  RangeSet.hpp  Registry.cpp  Registry.hpp  ResourceLocator.hpp  Tokenizer.cpp  Tokenizer.hpp  Typesystem.cpp  Typesystem.hpp  Utils.hpp  XML.cpp  XML.hpp
src/core/common/: Argument.cpp  Argument.hpp  CharReader.cpp  CharReader.hpp  Exceptions.cpp  Exceptions.hpp  Function.cpp  Function.hpp  Location.cpp  Location.hpp  Logger.cpp  Logger.hpp  Number.cpp  Number.hpp  Property.cpp  Property.hpp  Rtti.cpp  Rtti.hpp  RttiBuilder.cpp  RttiBuilder.hpp  SourceContextReader.cpp  SourceContextReader.hpp  Terminal.hpp  TextCursor.hpp  Token.cpp  Token.hpp  TypedRttiBuilder.cpp  TypedRttiBuilder.hpp  Utils.cpp  Utils.hpp  Variant.cpp  Variant.hpp  VariantConverter.cpp  VariantConverter.hpp  VariantReader.cpp  VariantReader.hpp  VariantWriter.cpp  VariantWriter.hpp  Whitespace.cpp  Whitespace.hpp  (+1 more)
src/core/dom/: Managed.cpp  Managed.hpp  Node.cpp  Node.hpp  NodeClasses.cpp  NodeClasses.hpp  Typesystem.hpp
src/core/frontend/: Terminal.cpp  Terminal.hpp  TerminalLogger.cpp  TerminalLogger.hpp
src/core/managed/: Events.cpp  Events.hpp  Managed.cpp  Managed.hpp  ManagedContainer.cpp  ManagedContainer.hpp  ManagedType.cpp  ManagedType.hpp  Manager.cpp  Manager.hpp  Rtti.cpp  Rtti.hpp
src/core/model/: Cardinality.hpp  Document.cpp  Document.hpp  Domain.cpp  Domain.hpp  Index.cpp  Index.hpp  Node.cpp  Node.hpp  Ontology.cpp  Ontology.hpp  Project.cpp  Project.hpp  RangeSet.hpp  ResolutionCallbacks.cpp  ResolutionCallbacks.hpp  RootNode.cpp  RootNode.hpp  Style.cpp  Style.hpp  Syntax.cpp  Syntax.hpp  Typesystem.cpp  Typesystem.hpp
src/core/parser/: Parser.cpp  Parser.hpp  ParserContext.cpp  ParserContext.hpp  ParserScope.cpp  ParserScope.hpp  ParserStack.cpp  ParserStack.hpp  ParserState.cpp  ParserState.hpp  Scope.cpp  Scope.hpp  XmlStates.cpp
src/core/resource/: Resource.cpp  Resource.hpp  ResourceLocator.cpp  ResourceLocator.hpp  ResourceManager.cpp  ResourceManager.hpp  ResourceRequest.cpp  ResourceRequest.hpp  ResourceUtils.cpp  ResourceUtils.hpp
src/core/script/: Function.cpp  Function.hpp  Object.cpp  Object.hpp  ScriptEngine.cpp  ScriptEngine.hpp  Variant.cpp  Variant.hpp
src/core/utils/: Buffer.hpp  BufferedCharReader.cpp  BufferedCharReader.hpp  CSSParser.cpp  CSSParser.hpp  CharReader.cpp  CharReader.hpp  CodeTokenizer.cpp  CodeTokenizer.hpp  Tokenizer.cpp  Tokenizer.hpp  Utils.cpp
src/core/variant/: Reader.cpp  Reader.hpp  Variant.cpp  Variant.hpp
src/formats/osdm/: DynamicTokenizer.cpp  DynamicTokenizer.hpp  OsdmStreamParser.cpp  OsdmStreamParser.hpp
src/formats/osdmx/: OsdmxParser.hpp
src/formats/osml/: OsmlParser.cpp  OsmlParser.hpp  OsmlStreamParser.cpp  OsmlStreamParser.hpp
src/formats/osxml/: OsxmlAttributeLocator.cpp  OsxmlAttributeLocator.hpp  OsxmlEventParser.cpp  OsxmlEventParser.hpp  OsxmlParser.cpp  OsxmlParser.hpp
src/gui/: notepad.cpp  notepad.hpp
src/gui/components/: GridTree.cpp  GridTree.hpp  UIGrid.cpp  UIGrid.hpp  UIPaneFrame.cpp  UIPaneFrame.hpp
src/gui/framework/: TileTreeNode.cpp  TileTreeNode.hpp
src/model/: GraphNode.cpp  GraphNode.hpp  RangeSet.hpp
src/model/document/: Anchor.hpp
src/model/domain/: Anchor.cpp  Annotation.cpp  Annotation.hpp  AnnotationCategory.hpp  AnnotationReference.hpp  Category.cpp  Category.hpp  Class.hpp  (+13 more)
src/xml/: XmlAttributeHandler.hpp  XmlElementHandler.hpp  XmlReader.cpp  XmlReader.hpp
test/core/: BufferedCharReaderTest.cpp  CSSParserTest.cpp  CSSTest.cpp  CodeTokenizerTest.cpp  LoggerTest.cpp  ManagedContainersTest.cpp  ManagedTest.cpp  NodeTest.cpp  RangeSetTest.cpp  RegistryTest.cpp  ResourceLocatorTest.cpp  StandaloneEnvironment.hpp  TestManaged.hpp  TokenizerTest.cpp  UtilsTest.cpp  XMLTest.cpp
test/integration/: Main.cpp  TestLogger.cpp  TestLogger.hpp  TestXmlParser.cpp  TestXmlParser.hpp
test/model/: GraphNode.cpp  RangeSet.cpp
testdata/osmlparser/: empty_domain.osml  empty_ontology.osml  empty_typesystem.osml  error_annotation_boundaries.osml  explicit_fields.osml  include_child.osml  include_recursive.osml  include_recursive_root.osml  include_root.osml  inline_domain.osml  inline_ontology.osml  invalid_explicit_fields.osml  math.osml  math_pythagoras.osml  math_ranges.osml  overlapping_annotations.osml  rollback_on_invalid_element.osml  simple_annotation.osml  simple_book.osml  struct_with_no_field.osml  structure_inheritance.osml  syntax_description.osml  undefined_annotation.osml  user_defined_syntax.osml
testdata/osxmlparser/: bibliography_domain.osxml  book_domain.osxml  book_ontology.osxml  comments_domain.osxml  comments_ontology.osxml  complex_book.osxml  empty_named_field.osxml  generic.osxml  headings_domain.osxml  headings_ontology.osxml  lists_domain.osxml  meta_domain.osxml  meta_ontology.osxml  mismatchedTag.osxml  simple_annotation.osxml  simple_book.osxml  test.osxml  version.osxml
testdata/xmlparser/: bibliography_domain.oxm  book_domain.osxml  book_domain.oxm  color.oxm  comments_domain.oxm  complex_book.oxd  generic.oxm  headings_domain.osxml  headings_domain.oxm  lists_domain.oxm  meta_domain.osxml  mismatchedTag.osxml  simple_book.oxd  test.osxml
(+231 files in other folders)
